# jumpstarter-lab-robot-tests

./: .aib-ci.yml  .devfile.yaml  .gitignore  README.md  catalog-info.yaml  pyproject.toml
.tekton/: pipeline-snippet-1.txt  pipeline-snippet-2.txt  pr-build-container.yaml  pr-build-release.yaml  pr-build-test.yaml
docs/: index.md
manifests/: radioapp.aib.yml
scripts/: README.md  flash
src/: radio-stations.cpp
tests/: JumpstarterLibrary.py  bdd_keywords.resource  bdd_test.robot  keywords.resource  test_on_hardware.py  test_on_hardware.robot  variables.resource
